--- a/BookStore/src/main/resources/i18n/messages_bg.properties
+++ b/BookStore/src/main/resources/i18n/messages_bg.properties
@@ -5,6 +5,7 @@ nav_bar_categories=Категории
 nav_bar_profile=Профил
 nav_bar_ShoppingBag=Количка
 nav_bar_adminBoard=Админ
+nav_bar_userBoard=Потребители
 nav_bar_login=Вход
 nav_bar_register=Регистрация
 nav_bar_logout=Изход
