--- a/BookStore/src/main/resources/i18n/messages_en.properties
+++ b/BookStore/src/main/resources/i18n/messages_en.properties
@@ -5,6 +5,7 @@ nav_bar_categories=Category
 nav_bar_profile=Profile
 nav_bar_ShoppingBag=Shopping bag
 nav_bar_adminBoard=Admin Board
+nav_bar_userBoard=Users Board
 nav_bar_login=Login
 nav_bar_register=Register
 nav_bar_logout=Logout
